--- a/index.html
+++ b/index.html
@@ -44,24 +44,21 @@
 <div align="center">
     <br>
     <img src="logo.png" alt="logo" >
-    <br>
-    <img src="tomb-stone_golden.png" alt="tomb-stone">
-    <img src="meni-neko.png" alt="cat">
-    <img src="sighn.png" alt="sign">
-    <img src="tall-grass.png" alt="grass">
-    <img src="tomb-stne_silver.png" alt="tomb-stone">
-
-
-
+    <img src="copyright-icon-8.jpg" alt="" width="10" height="10">
 
 
     <br>
-   <p>This website is a portifolio and blog of Tom Torrens.</p>
-   <p> This blog will cover latest projects, art exhibits, vedeo-games/websites </p>
-   <p>produced by Tom Torrens. </p> 
+ 
+
+
+
+
+
+    <br>
+   
    <br>
    <br>
-   <p>---____________________________--------------____________________________---</p>
+   
    <p></p>
 </div>
 </body>
