--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div align="center">
     <br>
     <img src="logo.png" alt="logo" >
-    <img src="copyright-icon-8.jpg" alt="" width="10" height="10">
+    <img src="bar.png" alt="logo" >
 
 
     <br>
