I have writin a few things

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <div align="center">
     <br>
-    <!-- <img src="logo.png" alt="logo" > -->
+    <img src="logo.png" alt="logo" >
     <img src="bar.png" alt="logo" >
 
 
@@ -55,11 +55,13 @@
 
 
     <br>
-    <p>this is a test if you are reading this hello i am from the past yay bye now</p>
    <br>
    <br>
    
-   <p></p>
+   <p>Hello and welcome to my personal blog, portfolio and art gallery. This<br>
+     website is for pretty much showing off all of myu work and a home page for<br>
+      T.L.Tco (my campany name). if you want to cheack out my websites click this link:<br>
+      <a href="websitelinks.html">my website projects</a></p>
 </div>
 </body>
 </html>
