--- a/websitelinks.html
+++ b/websitelinks.html
@@ -9,7 +9,7 @@
     <style>
 
         body{
-            background-image: url("weblogo.png");
+            background-image: url("webback.png");
             font-family: 'Press Start 2P', cursive;
             background-position: fixed;
           
@@ -36,15 +36,18 @@
          font-family: 'Press Start 2P', cursive;
        }
 
+
     </style> 
-    
+    <script>
+        alert="Sorry but this page is under construction right now."
+    </script>
 </head>
 <body>
 
 <div align="center">
     <br>
-    <img src="logo.png" alt="logo" >
-    <img src="bar.png" alt="logo" >
+    <img src="weblogo.png" alt="logo" >
+    <img src="webbar.png" alt="logo" >
 
 
     <br>
@@ -58,10 +61,7 @@
    <br>
    <br>
    
-   <p>Hello and welcome to my personal blog, portfolio and art gallery. This<br>
-     website is for pretty much showing off all of myu work and a home page for<br>
-      T.L.Tco (my campany name). if you want to cheack out my websites click this link:<br>
-      <a href="websitelinks.html">my website projects</a></p>
+
 </div>
 </body>
 </html>
