lots of stuff done deleted some things and cleaned everthing

--- a/photoshop/photoshops.html
+++ b/photoshop/photoshops.html
@@ -9,7 +9,7 @@
     <style>
 
         body{
-            background-image: url("gameback.png");
+            background-image: url("photoshop.png");
             font-family: 'Press Start 2P', cursive;
             background-position: fixed;
           
@@ -63,28 +63,51 @@
 
     </style> 
     <script>
-        alert("sorry but this page is under construction.");
+        // alert("sorry but this page is under construction.");
     </script>
 </head>
 <body>
 
 <div align="center">
     <br>
-    <img src="gamelogo.png" alt="logo" >
-    <img src="gamebar.png"1alt="logo" >
+    <img src="photoshoplogo.png" alt="logo" >
+    <img src="photoshopbar.png"1alt="logo" >
 
 
     <br>
- 
-
-
-    <a href="index.html">back</a>
     
-
+    <img src="elonlord.jpg" alt="HTML5 Icon" style="width:20%px;height:20%;">
     <br>
+    <p>This image really capture my idea of if Elon Musk was born a century or two before he was born in this timeline.</p>
+    <br>
+    <br>
+    <img src="king-elong.jpg" alt="HTML5 Icon" style="width:20%px;height:20%;">
+    <br>
+    <p>This master piece is a picture you may call a sequel to the image above. I call this one "LORD ELONG"</p>
+    <br>
+    <br>
+    <img src="p-51.jpg" alt="HTML5 Icon" style="width:10%px;height:10%;">
+    <br>
+    <p>This picture is a portrayal of a alternative universe where aliens arrived a few decades later. The plane in this picture is a p-51 mustang mostly used during the heat of ww2.</p>
+    <br>
+    <br>
+    <img src="sweden-nz-flag.jpg" alt="HTML5 Icon" style="width:10%px;height:10%;">
+    <br>
+    <p>This is yet another alternative universe where New Zealand was not colonized by Great Britain but by Sweden.</p>
+    <br>
+    <br>
+    <img src="waterlaptop.jpg" alt="HTML5 Icon" style="width:15%px;height:15%;">
+    <br>
+    <p>This is a quick brain fart that I did not do very well but it dose show an idea at least.</p>
+    <br>
+    <br>
+    <img src="theCheifVSTheCheif.jpg" alt="HTML5 Icon" style="width:10%px;height:10%;">
+    <br>
+    <P>This here is a failed idea it is not funny nore good looking but I call it "the chef vs the Chief"</P>
    <br>
    <br>
-   
+   <a href="file:///C:/Users/GGPC/Desktop/T.L.T-main/index.html">back</a>
+
 
 </div>
 </body>
