--- a/websites/websitelinks.html
+++ b/websites/websitelinks.html
@@ -84,7 +84,7 @@
     <br>
 
     <a href="https://catchthecat.surge.sh/">
-        <img src="catchTheCat.png" alt="HTML tutorial" style="">
+        <img src="catchTheCat.png" alt="HTML tutorial">
     </a>
 
     <br>
@@ -102,7 +102,7 @@
     <br>
 
     <a href="https://activityfinder.surge.sh/index.html">
-        <img src="activityfinder.png" alt="HTML tutorial" style="">
+        <img src="activityfinder.png" alt="HTML tutorial">
     </a>
     <br>
     <br>
