made the video thing and lernd how to spell video!!!!!!!!!!!

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <br>
             <br>
             <br>
-            <p>I like create art like photoshoped images, pixel art and sketching you can find some of my photoshops <a href="./photoshop/photoshops.html">here</a>. I wil probably put some of my other artwork here at some point.</p>
+            <p>I like create art like photoshoped images, pixel art and sketching you can find some of my photoshops <a href="./photoshop/photoshops.html">here</a>. I wil probably put some of my other artwork here at some point. I have also made a few videos using premiere pro you can see them <a href="./videos/videos.html">here</a></p>
             <br>
             <br>
             <br>
