--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             <br>
             <br>
             <br>
-            <img src="./photoshop/elonlord.jpg" alt="elonlord" style="width:10%px;height:10%px;margin-left:15px; margin-right: 80px;" align="right" align="top">
+
+            <a href="secret.html"><img src="./photoshop/elonlord.jpg" alt="elonlord" style="width:10%px;height:10%px;margin-left:15px; margin-right: 80px;" align="right" align="top"></a>
             <p>Hello and welcome to my personal blog, portfolio and art gallery. This website is for pretty
               much showing off all of my work and a home page for T.L.T co 
              (my Company name). if you want to check out my websites click this link: 
